--- a/functions/package.json
+++ b/functions/package.json
@@ -4,8 +4,8 @@
   "description": "Feel The Beat API",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
-    "start:dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "start": "node src/index.ts",
     "build": "tsc",
     "serve": "node dist/index.js"
   },
